--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.4.1",
     "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^5.0.2",
     "react-scripts": "3.4.1",
     "sass": "^1.26.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_PATH=src/ react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "NODE_PATH=src/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
